# SecuPrompt

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml
data/: modality.json  patterns.json  rag.json  threats.json  unicode.json
examples/js/: agent-guard.ts  basic-allow.ts  langchain-guard.ts  sanitize.ts
examples/py/: agent_guard.py  basic_allow.py  langchain_guard.py  sanitize.py
js/: data.ts  index.ts  types.ts
js/core/: embedding.ts
js/modules/: integrity.ts  rag.ts  semantic.ts  sentence_guard.ts  signature.ts  unicode.ts
py/: __init__.py  data.py  engine.py
py/core/: embedding.py
py/modules/: integrity.py  rag.py  semantic.py  sentence_guard.py  signature.py  unicode_scan.py
test/: demo_sanitize.py  demo_sanitize.ts
